--- a/ToDoApp.Mobile/ToDoApp.Mobile.csproj
+++ b/ToDoApp.Mobile/ToDoApp.Mobile.csproj
@@ -20,7 +20,10 @@
         <ApplicationVersion>1</ApplicationVersion>
         <EmbedAssembliesIntoApk>false</EmbedAssembliesIntoApk>
         <SupportedOSPlatformVersion>21.0</SupportedOSPlatformVersion>
-        <!-- Speeds up debug builds -->
+    </PropertyGroup>
+    
+    <!-- Speeds up debug builds -->
+    <PropertyGroup Condition="'$(Configuration)' == 'Debug'">
         <DebugType>portable</DebugType>
         <RunAOTCompilation>false</RunAOTCompilation>
         <PublishTrimmed>false</PublishTrimmed>
